--- a/wth-is-hoisting-and-why-you-should-care.mdx
+++ b/wth-is-hoisting-and-why-you-should-care.mdx
@@ -4,7 +4,7 @@ description: Brief explanation of hoisting in JavaScript
 publishedAt: 2023-10-15
 isPublished: true
 tags:
-  - javaScript
+  - javascript
 ---
 
 Hoisting is a JavaScript behaviour that moves all variable and function declarations to the top of their scope before executing the code. This means that we can use variables and functions before we declare them, as long as they're declared in the same scope.
