fix: update description and improve formatting in git setup guide

--- a/git-setup.mdx
+++ b/git-setup.mdx
@@ -1,19 +1,21 @@
 ---
 title: git setup
-description: Brief explanation of git setup
+description: How I setup git for development
 publishedAt: 2025-10-03
 isPublished: true
 tags:
   - git
 ---
 
-Set name and email (these appear in commits):
+# basics
+
+Set name and email
 
 ```shell
 git config --global user.name "Your Name"
 git config --global user.email "you@example.com"
 ```
-Common useful global settings:
+Common useful global settings
 
 ```shell
 git config --global core.editor "code --wait"   # VS Code
@@ -21,14 +23,14 @@ git config --global init.defaultBranch main
 git config --global credential.helper manager-core  # Windows credential helper
 ```
 
-Generate a key and add it to your Git hosting account:
+Generate a key and add it to your Git hosting account
 
 ```shell
 ssh-keygen -t ed25519 -C "you@example.com"
 ssh-keygen -t rsa -b 4096 -C "you@example.com"  # or for older systems
 ```
 
-Then copy the public key and add it to your provider (GitHub/GitLab). On Windows, open the public key with:
+Then copy the public key and add it to your provider (GitHub/GitLab). On Windows, open the public key with
 
 ```shell
 type %userprofile%\.ssh\id_ed25519.pub
@@ -36,13 +38,13 @@ type %userprofile%\.ssh\id_ed25519.pub
 
 Or use a clipboard helper like `clip < ~/.ssh/id_ed25519.pub` in Git Bash.
 
-Test the connection:
+Test the connection
 
 ```shell
 ssh -T git@github.com
 ```
 
-Add a remote and push your branch:
+Add a remote and push your branch
 
 ```shell
 git remote add origin git@github.com:owner/repo.git
@@ -52,7 +54,7 @@ git push -u origin main
 
 If using HTTPS, you'll be prompted for credentials unless you use a credential helper.
 
-Set a few global aliases to speed up common tasks:
+Set a few global aliases to speed up common tasks
 
 ```shell
 git config --global alias.st status
@@ -68,6 +70,22 @@ git config --global alias.lg "log --oneline --graph --all"
 - Amend last commit: `git commit --amend --no-edit` (or change message).
 - Recover lost commits: `git reflog` then `git checkout <sha>`.
 
+# advanced
 
----
+for multiple git host with different ssh auth and sign key
 
+```shell title="C://Users/username/.ssh/config"
+# github
+Host github.com
+    HostName github.com
+    User git
+    IdentityFile ~/.ssh/id_ed25519_github_auth
+    IdentitiesOnly yes
+
+# gitlab
+Host gitlab.com
+    HostName gitlab.com
+    User git
+    IdentityFile ~/.ssh/id_ed25519_gitlab_auth
+    IdentitiesOnly yes
+```
