fix: update headings from h1 to h2 in git setup guide

--- a/git-setup.mdx
+++ b/git-setup.mdx
@@ -7,7 +7,7 @@ tags:
   - git
 ---
 
-# basics
+## basics
 
 Set name and email
 
@@ -70,7 +70,7 @@ git config --global alias.lg "log --oneline --graph --all"
 - Amend last commit: `git commit --amend --no-edit` (or change message).
 - Recover lost commits: `git reflog` then `git checkout <sha>`.
 
-# advanced
+## advanced
 
 for multiple git host with different ssh auth and sign key
 
