fix: update Git configuration example with user name and email

--- a/git-configuration-based-on-remote-repositories.mdx
+++ b/git-configuration-based-on-remote-repositories.mdx
@@ -63,7 +63,7 @@ Host gitlab.com
 
 ### 3. Update your global Git configuration at `~/.gitconfig` to include the GitLab config when a repository uses a GitLab remote.
 
-```shell title="C://Users/username/.gitconfig" {14-17}
+```shell title="C://Users/username/.gitconfig"
 [user]
 	name = thisisrick25
 	email = swapnaneel06@gmail.com
